Prime Generation Method Optimized